feat: Implement player ranking and add award icons
- Players are now sorted by their total score in descending order.
- Added  for icons.
- Integrated gold, silver, and bronze award icons into  based on player rank.

--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "tsr:watch": "tsr watch",
-    "tsr:generate": "tsr generate", 
+    "tsr:generate": "tsr generate",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.125.6",
     "@tanstack/router": "^0.0.1-beta.53",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
